# ds210-sum26-code

./: README.md
discussion_3_linked_list/: Cargo.toml  README.md
discussion_3_linked_list/src/: drop_linked_list.rs  drop_main.rs  lib.rs  remove_linked_list.rs  remove_main.rs  simple_linked_list.rs  simple_main.rs
discussion_3_linked_list/tests/: remove.rs  simple.rs
module_2_why_rust/: README.md
module_2_why_rust/1_rust_vs_python/: README.md
module_6_evaluating_code/1_contains_duplicate/src/: sol2.rs
module_6_evaluating_code/3_missing_number/: Cargo.toml
module_6_evaluating_code/3_missing_number/src/: helpers.rs  sol1.rs  sol2.rs
module_6_evaluating_code/4_kth_largest_element/: Cargo.toml
module_6_evaluating_code/4_kth_largest_element/src/: helpers.rs  sol1.rs  sol2.rs
project_2_chatbot/: .gitignore  Cargo.toml
project_2_chatbot/.cargo/: config.toml
project_2_chatbot/cache_chatbot/: Cargo.toml
project_2_chatbot/cache_chatbot/src/solution/: v5.rs
project_2_chatbot/experiments/: Cargo.toml
project_2_chatbot/experiments/src/: experiment.rs  lib.rs
project_2_chatbot/file_chatbot/: Cargo.toml
project_2_chatbot/file_chatbot/src/: main.rs
project_2_chatbot/file_chatbot/src/solution/: v4.rs
project_2_chatbot/file_chatbot/tests/: history.rs  session_bug.rs
project_2_chatbot/fix/: Cargo.toml
project_2_chatbot/fix/src/: lib.rs
project_3_vec/: README.md
project_3_vec/fast_vec/src/: lib.rs  main.rs
project_3_vec/fixed/src/: lib.rs
project_3_vec/malloc/src/: allocator.rs
project_3_vec/malloc/tests/: malloc.rs  state.rs
project_3_vec/slow_vec/src/: lib.rs  main.rs
(+2 files in other folders)
